[project]
name            = "saveimagecustom"
version         = "1.0"
description     = "Easy save image with dir+name"
authors         = [{name = "No22"}]
license         = {file = "LICENSE"}
readme          = "README.md"
requires-python = ">=3.10"

[project.urls]
Repository      = "https://github.com/No-22-Github/ComfyUI_SaveImageCustom"

[tool.comfy]
PublisherId     = "hellono22"
DisplayName     = "Save Image (Dir+Name)"
includes        = []

